# BlaadPapers

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  Wallpaper.cpp  Wallpaper.hpp
.github/workflows/: aur-sync.yml
arch/: PKGBUILD
assets/: blaadpapers.fish
blaadpapers/: CMakeLists.txt
blaadpapers-daemon/: CMakeLists.txt
blaadpapers-daemon/src/: main.cpp
blaadpapers/include/: Defaults.hpp  Global.hpp
blaadpapers/src/: Wallpaper.cpp  main.cpp
cli/: CMakeLists.txt
cli/include/: Option.hpp  OptionExecutor.hpp
cli/src/: OptionExecutor.cpp  main.cpp
gui/: CMakeLists.txt
gui/include/model/: ConfigModel.hpp  StatusModel.hpp  WallpapersModel.hpp
gui/include/preview/: PicturePreviewGenerator.hpp  PreviewGenerator.hpp  PreviewManager.hpp  VideoPreviewGenerator.hpp
gui/include/util/: ExtraPathUtils.hpp  Loggers.hpp  PathUtilsExtra.hpp  ToString.hpp  ToStringExtra.hpp
gui/qml/: MainWindow.qml  WallpaperPreview.qml
gui/src/: main.cpp
gui/src/model/: ConfigModel.cpp  StatusModel.cpp  WallpapersModel.cpp
gui/src/preview/: PicturePreviewGenerator.cpp  PreviewManager.cpp  VideoPreviewGenerator.cpp
include/: CacheLoader.hpp  Config.hpp  ConfigManager.hpp  ConfigReader.hpp  Defaults.hpp  Global.hpp  HelpStrings.hpp  ImageFormat.hpp  OptionExecutor.hpp  PictureWallpaper.hpp  SceneWallpaper.hpp  Strings.hpp  Tags.hpp  Util.hpp  VideoWallpaper.hpp  Wallpaper.hpp  WallpaperLoader.hpp  WallpaperManager.hpp  Wallpapers.hpp
include/cli/: HelpStrings.hpp  OptionExecutor.hpp
include/data/: PictureWallpaper.hpp  Tag.hpp  VideoWallpaper.hpp  Wallpaper.hpp  WallpaperType.hpp
include/gui/: MainWindow.hpp  QFlowLayout.hpp  QWallpaperGrid.hpp  QWallpaperPreview.hpp  WallpaperGrid.hpp
include/model/: ConfigModel.hpp  Counter.hpp  StatusModel.hpp  WallpaperList.hpp  WallpapersModel.hpp
include/qt/: MainWindow.hpp  QWallpaperPreview.hpp
include/util/: Ffmpeg.hpp  FormatUtils.hpp  Loggers.hpp  Operators.hpp  PathUtils.hpp  Pointers.hpp  ScreenUtils.hpp  Seters.hpp  ToString.hpp  WallpaperUtils.hpp  ffmpeg.hpp
lib/json/: json.hpp
qml/: MainWindow.qml  StatusBar.qml  WallpaperFlow.qml  WallpaperPreview.qml
qml/MyStyle/: ApplicationWindow.qml  Menu.qml  MenuItem.qml  TextField.qml  ToolButton.qml
qml/style/: ApplicationWindow.qml  Menu.qml  MenuItem.qml  TextField.qml  ToolButton.qml  ToolTip.qml
qml/style/animation/: ScaleAnim.qml
res/: blaadpapers.desktop  blaadpapers.fish
resource/: blaadpapers.desktop  blaadpapers.fish  blaadpapers.zsh
resources/: blaadpapers.desktop  blaadpapers.fish
shared/: CMakeLists.txt
shared/include/: Config.hpp  PostSetScript.hpp  WallpaperLoader.hpp  Wallpapers.hpp
shared/include/data/: PictureWallpaper.hpp  Size.hpp  VideoWallpaper.hpp  Wallpaper.hpp
shared/include/util/: Ffmpeg.hpp  FormatUtils.hpp  Loggers.hpp  PathUtils.hpp  Prints.hpp  ToString.hpp  Vips.hpp
shared/src/: Config.cpp  PostSetScript.cpp  WallpaperLoader.cpp  Wallpapers.cpp
shared/src/data/: PictureWallpaper.cpp  Size.cpp  VideoWallpaper.cpp  Wallpaper.cpp
src/: CacheLoader.cpp  CacheLoader.hpp  Config.cpp  ConfigManager.cpp  ConfigReader.cpp  OptionExecutor.cpp  PictureWallpaper.cpp  SceneWallpaper.cpp  Tags.cpp  VideoWallpaper.cpp  Wallpaper.cpp  Wallpaper.hpp  WallpaperLoader.cpp  WallpaperManager.cpp  Wallpapers.cpp  main.cpp
src/cli/: OptionExecutor.cpp
src/data/: PictureWallpaper.cpp  Tag.cpp  VideoWallpaper.cpp  Wallpaper.cpp
src/gui/: MainWindow.cpp  MainWindow.ui  QFlowLayout.cpp  QWallpaperGrid.cpp  QWallpaperPreview.cpp  WallpaperGrid.cpp
src/model/: ConfigModel.cpp  Counter.cpp  StatusModel.cpp  WallpaperList.cpp  WallpapersModel.cpp
src/qt/: MainWindow.cpp  QWallpaperPreview.cpp
